<resources>
    <string name="app_name">fil_rouge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_photo">Choisir une image</string>
    <string name="choose_photo">Prendre une image</string>
    <string name="avatar">Avatar</string>
    <string name="editFirstname">Firstname</string>
    <string name="editLastname">Lastname</string>
    <string name="editMail">Mail</string>
    <string name="editTask">Editer la tâche</string>
    <string name="deleteTask">Supprimer la tache</string>
</resources>